Update website with news

--- a/actu.html
+++ b/actu.html
@@ -249,10 +249,31 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="mb-5">SonoRezé II (2023-25)</h3>
+          <h3 class="mb-5">Actualités du projet</h3>
         </div>
       </div>
       <div class="row">
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://www.reze.fr/evenement/sonoreze-session-de-mesure-collective/" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_06_01_NoiseCapture_party.png">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                NoiseCapture party - secteur Mairie
+              </h5>
+              <p>
+                01/06/2023 à 18h30
+              </p>
+              <a href="https://www.reze.fr/evenement/sonoreze-session-de-mesure-collective/" target="_blank" class="text-info icon-move-right">Lire l'annonce
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
 
         <div class="col-lg-3 col-sm-6">
           <div class="card card-plain card-blog">
@@ -275,27 +296,6 @@
           </div>
         </div>
 
-
-        <div class="col-lg-3 col-sm-6">
-          <div class="card card-plain card-blog">
-            <div class="card-image border-radius-lg position-relative">
-              <a href="https://www.reze.fr/publication/reze-mensuel-n179-mai-2023/" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_04_27_Hebdo_Reze.png">
-              </a>
-            </div>
-            <div class="card-body px-0">
-              <h5>
-                SonoRezé - Tendez l'oreille !
-              </h5>
-              <p>
-                Rezé Mensuel n°179 - 01/05/2023
-              </p>
-              <a href="https://www.reze.fr/publication/reze-mensuel-n179-mai-2023/" target="_blank" class="text-info icon-move-right">Lire l'article
-                <i class="fas fa-arrow-right text-sm"></i>
-              </a>
-            </div>
-          </div>
-        </div>
 
         <div class="col-lg-3 col-md-12 col-12">
           <div class="card card-blog card-background">
@@ -322,13 +322,77 @@
   </section>
 
 
+
+  <!-- -------------------------------------------------------------------------------- -->
+  <!-- Actualités SonoRezé II -->
+  <section class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="mb-5">SonoRezé dans la presse</h3>
+        </div>
+      </div>
+      <div class="row">
+        <h4 class="mb-5">SonoRezé II (2023-25)</h4>
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://www.ouest-france.fr/pays-de-la-loire/reze-44400/unique-au-monde-sonoreze-veut-pousser-plus-loin-ses-analyses-du-bruit-dans-la-ville-4d204030-f623-11ed-81c3-16bd97291488" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_05_26_Ouest_France.jpeg">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                « Unique au monde », SonoRezé veut pousser plus loin ses analyses du bruit dans la ville
+              </h5>
+              <p>
+                Ouest France - 26/05/2023
+              </p>
+              <a href="https://www.ouest-france.fr/pays-de-la-loire/reze-44400/unique-au-monde-sonoreze-veut-pousser-plus-loin-ses-analyses-du-bruit-dans-la-ville-4d204030-f623-11ed-81c3-16bd97291488" target="_blank" class="text-info icon-move-right">Lire l'article
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://www.reze.fr/publication/reze-mensuel-n179-mai-2023/" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_04_27_Hebdo_Reze.png">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                SonoRezé - Tendez l'oreille !
+              </h5>
+              <p>
+                Rezé Mensuel n°179 - 01/05/2023
+              </p>
+              <a href="https://www.reze.fr/publication/reze-mensuel-n179-mai-2023/" target="_blank" class="text-info icon-move-right">Lire l'article
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+       
+
+
+
+      </div><!-- row -->
+    </div>
+  </section>
+
+
+
+
   <!-- -------------------------------------------------------------------------------- -->
   <!-- Actualités SonoRezé -->
   <section class="py-3">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="mb-5">SonoRezé (2021-22)</h3>
+          <h4 class="mb-5">SonoRezé (2021-22)</h4>
         </div>
       </div>
       <div class="row">
