Add Cerema and update participate

--- a/participer/habitant.html
+++ b/participer/habitant.html
@@ -268,7 +268,7 @@
 
 
 
-  <!-- Container Tâche 1 -->
+  <!-- Container Mesurer -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
       <div class="col-lg-3">
@@ -281,7 +281,7 @@
       <div class="col-lg-9">
         <div class="row mt-3">
 
-      <!-- T1.1 -->
+      <!-- NoiseCapture -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
@@ -302,7 +302,7 @@
         </div>
       </div><!-- col-12 -->
 
-      <!-- T1.1 -->
+      <!-- Comment ça marche -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
@@ -327,6 +327,35 @@
         </div>
       </div><!-- col-12 -->
 
+
+      <!-- Que dois-je mesurer -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+                <h5 class="text-primary text-gradient">Que dois-je mesurer, où et quand ?</h5>
+                <br>
+                <h6 class="text-primary text-gradient">Quoi ?</h6>
+                <p>
+                SonoRezé s'intéresse aux environnements sonores (aussi appelés "paysages sonores") de la ville. <br>
+                Ces environnements sont composés de sons agréables ou désagréables, forts ou faibles, aigus ou graves, ... <br><br>
+                Dès lors, lorsque vous réalisez des mesures à l'aide de NoiseCapture ne vous limitez pas aux sources de nuisance. 
+                Si vous jugez qu'un évènement sonore mérite d'être mesuré, n'hésitez pas.<br><br>
+                </p>
+
+                <br>
+                <h6 class="text-primary text-gradient">Où et quand ?</h6>
+                <p>
+                Par ailleurs, l'objectif est de disposer d'une cartographie la plus représentative possible. Pour cela, nous devons agir sur deux paramètres :<br>
+                - la <b>couverture spatiale</b> : afin de couvrir la plus grande zone possible, nous vous conseillons de réaliser des mesures en vous déplaçant.<br>
+                - la <b>couverture temporelle</b> : nous vous conseillons de réaliser des mesures à différentes périodes de la journée, mais aussi de la semaine (ex: le bruit des voitures peut être présent aux heures de pointes et absent le reste de la journée / une nuisance peut exister les jours ouvrés et être absente le week-end). <br><br>
+                En mixant ces deux paramètres, il vous est possible de réaliser des mesures au même endroit mais à différents moments. Cela permettra d'avoir une meilleure vue sur le contexte acoustique du lieu en question.
+                </p>
+            </div><!-- row -->
+            <br>
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
       
 
         </div> <!-- row mt-3 -->
@@ -335,7 +364,7 @@
   </div><!-- container -->
 
 
-  <!-- Container Tâche 2 -->
+  <!-- Container Discuter -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
       <div class="col-lg-3">
