--- a/projet/historique.html
+++ b/projet/historique.html
@@ -286,7 +286,7 @@
                 <h5 class="text-primary text-gradient">Consortium</h5>
                 <p>SonoRezé II est réalisé par les acteurs suivants :</br>
                   - Collectivité : <a href="https://www.reze.fr/" target="_blank"><b>Ville de Rezé</b></a> </br>
-                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a>), Laboratoire "Espaces et SOciétés" (<a href="http://eso.cnrs.fr/eso.cnrs.fr/fr/index.html" target="_blank"><b>ESO</b></a> - UMR 6590 - <a href="https://www.institut-agro-rennes-angers.fr/" target="_blank"><b>Institut Agro Rennes Angers</b></a>)</br>
+                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a> / <a href="https://www.cerema.fr/" target="_blank"><b>Cerema</b></a>), Laboratoire "Espaces et SOciétés" (<a href="http://eso.cnrs.fr/eso.cnrs.fr/fr/index.html" target="_blank"><b>ESO</b></a> - UMR 6590 - <a href="https://www.institut-agro-rennes-angers.fr/" target="_blank"><b>Institut Agro Rennes Angers</b></a>)</br>
                   - Tiers veilleur : <a href="https://www.auxilia-conseil.com/" target="_blank"><b>Auxilia Conseil</b></a>
                 </p>
                 <p>Le pilotage du projet est effectué par l'Université Gustave Eiffel (UMRAE)</p>
@@ -352,7 +352,7 @@
                 <h5 class="text-primary text-gradient">Consortium</h5>
                 <p>SonoRezé I a été réalisé par les acteurs suivants :</br>
                   - Collectivité : <a href="https://www.reze.fr/" target="_blank"><b>Ville de Rezé</b></a> </br>
-                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a>)
+                  - Académiques : Unité Mixte de Recherche en Acoustique Environmentale (<a href="https://umrae.fr/" target="_blank"><b>UMRAE</b></a> - <a href="https://www.univ-gustave-eiffel.fr/" target="_blank"><b>Université Gustave Eiffel</b></a> / <a href="https://www.cerema.fr/" target="_blank"><b>Cerema</b></a>)
                 </p>
                 <p>Le pilotage du projet a été effectué par l'Université Gustave Eiffel (UMRAE)</p>
                 <img src="../assets/img/historique/consortium_sonoreze_1.png" width="100%">
