Add new article

--- a/resultats/publications.html
+++ b/resultats/publications.html
@@ -264,8 +264,10 @@
           <div class="container border-bottom">
             <div class="row justify-space-between py-2">
               <p>
-                Can A., Audubert P., Aumond P., Guiu C., Lorino T., Rossa E., <font color="#FF0080">"Sound environments and citizen action: what place for the participatory tool? The case of the city of Reze using NoiseCapture."</font> Proceedings of Internoise 2022, Glasgow, 21-24 August, 2022. (<a href="https://az659834.vo.msecnd.net/eventsairwesteuprod/production-inconference-public/57649fb5ee4f4b88bc34914c045f35f9" target="_blank">Lire l'article</a> &#127468;&#127463;)</br>
-              </br>
+                 Can A., Audubert P., Aumond P., Geisler E., Guiu C., Lorino T., Rossa E., <font color="#FF0080">"Framework for urban sound assessment at the city scale based on citizen action, with the smartphone application NoiseCapture as a lever for participation"</font>, Noise Mapping, vol. 10, no. 1, 2023, pp. 20220166.  (<a href="https://doi.org/10.1515/noise-2022-0166" target="_blank">Lire l'article</a> &#127468;&#127463;)<br>
+              <br>
+                Can A., Audubert P., Aumond P., Guiu C., Lorino T., Rossa E., <font color="#FF0080">"Sound environments and citizen action: what place for the participatory tool? The case of the city of Reze using NoiseCapture."</font> Proceedings of Internoise 2022, Glasgow, 21-24 August, 2022. (<a href="https://az659834.vo.msecnd.net/eventsairwesteuprod/production-inconference-public/57649fb5ee4f4b88bc34914c045f35f9" target="_blank">Lire l'article</a> &#127468;&#127463;)<br>
+              <br>
                 Can A., Audubert P., Aumond P., Guiu C., Lorino T., Rossa E., <font color="#FF0080">"Environnements sonores et action citoyenne : quelle place pour l’outil participatif ? Le cas de la ville de Reze."</font> Proceedings of UGI (Union Geographique Internationale) 2022, Paris, 18-22 July, 2022 
               </p>
             </div><!-- row -->
