Update news, results and protocol to participate

--- a/actu.html
+++ b/actu.html
@@ -257,8 +257,50 @@
         <div class="col-lg-3 col-sm-6">
           <div class="card card-plain card-blog">
             <div class="card-image border-radius-lg position-relative">
-              <a href="https://www.reze.fr/evenement/sonoreze-session-de-mesure-collective/" target="_blank">
-                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_06_01_NoiseCapture_party.png">
+              <a href="https://twitter.com/Noise_Planet/status/1671493861015789571" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/NoiseCapture_party_2023_06_24.png">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                NoiseCapture party - secteur Balinière
+              </h5>
+              <p>
+                24/06/2023 à 10h00
+              </p>
+              <a href="https://twitter.com/Noise_Planet/status/1671493861015789571" target="_blank" class="text-info icon-move-right">Lire l'annonce
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>              
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://twitter.com/Noise_Planet/status/1666013043044524032?s=20" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/NoiseCapture_party_2023_06_14.png">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                NoiseCapture party - secteur Trentemoult
+              </h5>
+              <p>
+                14/06/2023 à 18h30
+              </p>
+              <a href="https://twitter.com/Noise_Planet/status/1666013043044524032?s=20" target="_blank" class="text-info icon-move-right">Lire l'annonce
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://twitter.com/Noise_Planet/status/1662084234427736064?s=20" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/NoiseCapture_party_2023_06_01.png">
               </a>
             </div>
             <div class="card-body px-0">
@@ -268,12 +310,36 @@
               <p>
                 01/06/2023 à 18h30
               </p>
-              <a href="https://www.reze.fr/evenement/sonoreze-session-de-mesure-collective/" target="_blank" class="text-info icon-move-right">Lire l'annonce
+              <a href="https://twitter.com/Noise_Planet/status/1662084234427736064?s=20" target="_blank" class="text-info icon-move-right">Lire l'annonce
                 <i class="fas fa-arrow-right text-sm"></i>
               </a>
             </div>
           </div>
         </div>
+
+        <div class="col-lg-3 col-md-12 col-12">
+          <div class="card card-blog card-background">
+            <div class="full-background" style="background-image: url('./assets/img/actu/2023_02_09_ANR_resultat.png')"></div>
+            <div class="card-body">
+              <div class="content-left text-start my-auto py-4">
+                <a href="https://anr.fr/fileadmin/aap/2022/selection/saps-ra-rp1-2022-selection.pdf" target="_blank">
+                  <h2 class="card-title text-white">SonoRezé II</h2>
+                  <p class="card-description text-white">Le projet SonoRezé II est accepté par l'Agence Nationale de la Recherche (ANR).</p>
+                  <p class="card-description text-white">ANR - 09/02/2023</p>
+                  <a href="https://anr.fr/fileadmin/aap/2022/selection/saps-ra-rp1-2022-selection.pdf" target="_blank" class="text-white icon-move-right">Lire le document
+                    <i class="fas fa-arrow-right text-sm"></i>
+                  </a>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+</div><!-- row -->
+
+      <br>
+
+      <div class="row">
 
         <div class="col-lg-3 col-sm-6">
           <div class="card card-plain card-blog">
@@ -292,25 +358,6 @@
               <a href="https://www.reze.fr/actualite/sonoreze-2-reunion-dinformation-le-24-mai/" target="_blank" class="text-info icon-move-right">Lire l'annonce
                 <i class="fas fa-arrow-right text-sm"></i>
               </a>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-3 col-md-12 col-12">
-          <div class="card card-blog card-background">
-            <div class="full-background" style="background-image: url('./assets/img/actu/2023_02_09_ANR_resultat.png')"></div>
-            <div class="card-body">
-              <div class="content-left text-start my-auto py-4">
-                <a href="https://anr.fr/fileadmin/aap/2022/selection/saps-ra-rp1-2022-selection.pdf" target="_blank">
-                  <h2 class="card-title text-white">SonoRezé II</h2>
-                  <p class="card-description text-white">Le projet SonoRezé II est accepté par l'Agence Nationale de la Recherche (ANR).</p>
-                  <p class="card-description text-white">ANR - 09/02/2023</p>
-                  <a href="https://anr.fr/fileadmin/aap/2022/selection/saps-ra-rp1-2022-selection.pdf" target="_blank" class="text-white icon-move-right">Lire le document
-                    <i class="fas fa-arrow-right text-sm"></i>
-                  </a>
-                </a>
-              </div>
             </div>
           </div>
         </div>
@@ -547,7 +594,80 @@
           </div>
         </div>
 
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://www.ouest-france.fr/pays-de-la-loire/nantes-44000/reze-associe-ses-habitants-a-la-mesure-du-bruit-8fc57552-5374-11ec-b53a-77eefdd898ae" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2021_12_03_Ouest_France.jpeg">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                Rezé associe ses habitants à la mesure du bruit
+              </h5>
+              <p>
+                Article Ouest France - 03/12/2021
+              </p>
+              <a href="https://www.ouest-france.fr/pays-de-la-loire/nantes-44000/reze-associe-ses-habitants-a-la-mesure-du-bruit-8fc57552-5374-11ec-b53a-77eefdd898ae" target="_blank" class="text-info icon-move-right">Lire l'article
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div><!-- row -->
+
+
+      <br>
+
+      <div class="row">
+
+        <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://www.reze.fr/actualite/sonoreze-les-bruits-de-la-ville-cartographies-par-les-habitants/" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2021_12_01_Ville_Reze.png">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                SonoRezé : les bruits de la ville cartographiés par les habitants
+              </h5>
+              <p>
+                Ville de Rezé - 01/12/2021
+              </p>
+              <a href="https://www.reze.fr/actualite/sonoreze-les-bruits-de-la-ville-cartographies-par-les-habitants/" target="_blank" class="text-info icon-move-right">Lire l'article
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+       <div class="col-lg-3 col-sm-6">
+          <div class="card card-plain card-blog">
+            <div class="card-image border-radius-lg position-relative">
+              <a href="https://www.ouest-france.fr/pays-de-la-loire/reze-44400/reze-mesure-du-bruit-dans-la-ville-participez-avec-votre-telephone-67352aac-5035-11ec-85b0-a41f27f99512" target="_blank">
+                <img class="w-100 border-radius-lg move-on-hover shadow" src="./assets/img/actu/2023_05_26_Ouest_France.jpeg">
+              </a>
+            </div>
+            <div class="card-body px-0">
+              <h5>
+                Rezé. Mesure du bruit dans la ville, participez avec votre téléphone
+              </h5>
+              <p>
+                Article Ouest France - 28/11/2021
+              </p>
+              <a href="https://www.ouest-france.fr/pays-de-la-loire/reze-44400/reze-mesure-du-bruit-dans-la-ville-participez-avec-votre-telephone-67352aac-5035-11ec-85b0-a41f27f99512" target="_blank" class="text-info icon-move-right">Lire l'article
+                <i class="fas fa-arrow-right text-sm"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+
+      </div><!-- row -->
+
+
 
     </div>
   </section>
