--- a/participer/habitant.html
+++ b/participer/habitant.html
@@ -291,11 +291,11 @@
                 Pour mesurer votre environnement sonore (le bruit ambiant, les oiseaux, le vent dans les arbres, ...), nous vous proposons d'utiliser l'application <a href="https://noise-planet.org/noisecapture.html" target="_blank"><b>NoiseCapture</b></a>, développée par l'<a href="https://umrae.fr/" target="_blank">UMRAE</a> membre du projet. 
                 <br><br>
                 En quelques mots, cette application :<br>
-                - ne fonctionne <b>que sur les smartphones Android</b>,<br>
+                - ne fonctionne <b>que sur les smartphones Android*</b>,<br>
                 - est <b>gratuite, sans publicités et ne collecte aucune information sensible</b> sur votre smartphone,<br>
                 - ne nécéssite <b>aucune inscription préalable</b> (pas de compte avec un identifiant / mot de passe),<br>
-                - <b>n'enregistre pas l'audio</b> (le bruit, les discussions, ...). Seuls des indicateurs acoustiques sont collectés. <b>Ces indicateurs ne permettent pas de reconnaître une personne ou de reconstruire une discussion.</b><br>
-
+                - <b>n'enregistre pas l'audio</b> (le bruit, les discussions, ...). Seuls des indicateurs acoustiques sont collectés. <b>Ces indicateurs ne permettent pas de reconnaître une personne ou de reconstruire une discussion.</b><br><br>
+                <b>* vous avez un Iphone ?</b> Nous avons prévu de pouvoir vous prêter des smartphones Android, déjà équipés de NoiseCapture. Contactez-nous pour en savoir plus.
                 </p>
             </div><!-- row -->
           </div><!-- container -->
@@ -313,6 +313,12 @@
                 </p>
                 <p align="center">
                 <img src="../assets/img/participer_habitant/noisecapture_installer_mesurer.png" width="100%">
+                </p>
+                <p>
+                  À la 3ème étape, concernant la <b>description</b> de la mesure, notez que l'interface est divisée en 3 parties : <br>
+                  - A/ informations strictement personnelles et donc <b>non transmises à la communauté</b>, <br>
+                  - B/ code dédié aux NoiseCapture Party : <b>ne pas renseigner dans le cadre du projet SonoRezé,</b> <br>
+                  - C/ partie dédiée à la <b>description</b> que vous êtes invité à renseigner (même si cela reste optionnel)
                 </p>
                 <p>
                 Une fois la mesure réalisée et décrite, les données sont automatiquement transmises sur notre serveur. À partir de là, les informations sont contrôlées et mises en forme pour alimenter une base de données communautaire et mondiale. Ces données sont directement visibles sur <a href="https://noise-planet.org/map_noisecapture/index.html#15/47.1829/-1.5718/" target="_blank"><b>cette carte interactive</b></a>.
