--- a/resultats/publications.html
+++ b/resultats/publications.html
@@ -245,7 +245,7 @@
 <section class="py-7">
 
 
-  <!-- Container Tâche 1 -->
+  <!-- Container Articles scientifiques -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
       <div class="col-lg-3">
@@ -269,6 +269,41 @@
                 Can A., Audubert P., Aumond P., Guiu C., Lorino T., Rossa E., <font color="#FF0080">"Sound environments and citizen action: what place for the participatory tool? The case of the city of Reze using NoiseCapture."</font> Proceedings of Internoise 2022, Glasgow, 21-24 August, 2022. (<a href="https://az659834.vo.msecnd.net/eventsairwesteuprod/production-inconference-public/57649fb5ee4f4b88bc34914c045f35f9" target="_blank">Lire l'article</a> &#127468;&#127463;)<br>
               <br>
                 Can A., Audubert P., Aumond P., Guiu C., Lorino T., Rossa E., <font color="#FF0080">"Environnements sonores et action citoyenne : quelle place pour l’outil participatif ? Le cas de la ville de Reze."</font> Proceedings of UGI (Union Geographique Internationale) 2022, Paris, 18-22 July, 2022 
+              </p>
+            </div><!-- row -->
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
+
+      
+
+        </div> <!-- row mt-3 -->
+      </div><!-- col-lg-9 -->
+    </div><!-- row -->
+  </div><!-- container -->
+
+
+
+ <!-- Container Rapports -->
+  <div class="container mt-sm-5 mt-3">
+    <div class="row">
+      <div class="col-lg-3">
+        <div class="position-sticky pb-lg-5 pb-3 mt-lg-0 mt-5 ps-2" style="top: 100px">
+          <h3>Rapports</h3>
+          
+        </div>
+      </div><!-- col-lg-3 -->
+
+      <div class="col-lg-9">
+        <div class="row mt-3">
+
+      <!-- Rapports -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+              <p>
+                 Pedessaud M. <font color="#FF0080">"La Participation citoyenne pour changer les perceptions de l’environnement sonore et impliquer les habitants. Évaluation du projet SonoRezé."</font>, Rapport de Master, Université d’Angers, 2022 
               </p>
             </div><!-- row -->
           </div><!-- container -->
